--- a/src/components/HomeContent/AwardBanner.css
+++ b/src/components/HomeContent/AwardBanner.css
@@ -7,22 +7,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--primary);
+    background: linear-gradient(0deg, transparent 65px, var(--primary) 65.1px);
 }
 .award-banner-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     flex-wrap: wrap;
     max-width: 1200px;
+    justify-content: center;
 }
 .award-banner .award-banner-left{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    /* width: 100%; */
     z-index: 2;
-
     flex-basis: 20%;
+    color: white;
+    margin-top: 10px;
 }
 .award-banner .quote-image{
     height: 120px;
@@ -43,15 +45,14 @@
 }
 
 .award-banner .quote-label{
-    background-color: var(--card-background);
-    width: 100%;
     height: 100%;
     border-radius: 20px;
     border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-top-left-radius: 0;
     align-items: flex-end;
     text-align: center;
     padding: 0 15px;
+    
 }
 .award-banner .quote-label h3{
     font-size: 1rem;
@@ -63,8 +64,7 @@
     flex-direction: column;
     text-align: left;
     margin: 0px 15px;
-
-    flex-basis: 75%;
+    flex-basis: 60%;
 }
 .award-banner .award-banner-title h2{
     color: white;
@@ -82,15 +82,16 @@
     background-color: var(--card-background);
     padding: 15px;
     padding-right: 25px;
-    padding-left: 108px;
-    margin-left: -108px;
+    
 
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 
 .award-banner .award-banner-paragraph p{
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: left;
     font-style: italic;
     margin-block-start: 0em;
@@ -110,56 +111,109 @@
     margin-left: 15px;
     margin-right: 15px;
 
-    flex-basis: 0;
-    
+    /* flex-basis: 0; */
 }
 .award-banner-image img{
     max-height: 500px;
     max-width: 90vw;
-    flex-basis: 0;
+    /* flex-basis: 0; */
 }
 .award-banner-image.border{
-    transition: all 0.3s ease;
+    /* transition: all 0.3s ease;
     border: 6px solid var(--card-background);
     border-radius: 20px;
     background-color: var(--card-background);
     height: 100%;
     width: 100%;
-    font-size: 0;
+    font-size: 0; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    display: none;
 }
 .award-banner-image.border img{
     transform: scale(1.01);
     border-radius: 20px;
     padding: 1px;
+
+    transition: all 0.3s ease;
+    border: 4px solid var(--card-background);
+    border-radius: 20px;
+    background-color: var(--card-background);
 }
 
 /* Tablet */
 @media only screen and (min-width: 768px){
     .award-banner-container{
-        flex-direction: row;
+        /* flex-direction: row; */
         /* align-items: flex-start; */
+        max-width: 90vw;
     }
-    .award-banner .award-banner-text{
+    
+    /* .award-banner .award-banner-text{
         margin: 0 20px;
+        flex-basis: 74.5%;
+    } */
+    .award-banner .award-banner-title h2{
+        font-size: 1.5rem;
     }
     .award-banner .award-banner-paragraph p{
         text-align: justify;
+        font-size: 1.2rem;
     }
-    .award-banner-image{
-        margin: 0;
-        margin-top: auto;
+    .award-banner-image.border{
+        display: none;
     }
-    img{
-        width: 300px;
+    .award-banner-image img{
+        width: 500px;
     }
 }
 /* DeskTop */
 @media only screen and (min-width: 1200px){
+    .award-banner{
+        background-color: var(--primary);
+    }
+    .award-banner-container{
+        flex-direction: row;
+        max-width: 1200px;
+    }
+    .award-banner .award-banner-left{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        color: var(--text-primary);
+        background: linear-gradient(90deg, var(--primary) 50%, transparent 50.1%);
+        margin-top: 0;
+    }
+    .award-banner .award-banner-paragraph{
+        padding-left: 130px;
+        margin-left: -130px;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+    .award-banner .quote-label{
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        padding: 0 15px;
+        /* margin-top: 0; */
+        background-color: var(--card-background);
+
+        padding-top: 0px;
+        margin-top:  0px;
+    }
     .award-banner .award-banner-title h2{
         font-size: 1.75rem;
     }
-    
-    img{
+    .award-banner-image.border{
+        margin: 0;
+        margin-top: auto;
+        display: block;
+    }
+    .award-banner-image img{
         width: 390px;
     }
     .award-banner-container{
