--- a/src/components/HomeContent/Row.css
+++ b/src/components/HomeContent/Row.css
@@ -19,7 +19,7 @@
     margin-block-end: 0.2em;
 }
 .row .row-paragraph p{
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: left;
     margin-block-start: 0em;
 }
@@ -38,7 +38,7 @@
 }
 .row-image.border img{
     border-radius: 20px;
-    border: 6px solid var(--pink);
+    border: 4px solid var(--pink);
     background-color: var(--pink);
 }
 
@@ -52,12 +52,13 @@
         margin: 0 20px;
     }
     .row .row-paragraph p{
+        font-size: 1rem;
         text-align: justify;
     }
     .row-image{
         margin: auto 0;
     }
-    img{
+    .row-image img{
         width: 300px;
     }
 }
@@ -66,8 +67,10 @@
     .row .row-title h2{
         font-size: 2.5rem;
     }
-    
-    img{
+    .row .row-paragraph p{
+        font-size: 1.2rem;
+    }
+    .row-image img{
         width: 390px;
     }
     .row-image.border img{
