--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -176,7 +176,7 @@ a{
 .sidebar.active{
   left: 0;
   transition: 350ms;
-  z-index: 2;
+  z-index: 3;
   box-shadow: 0px 0px 10px black;
 }
 .side-blur{ /* Not really a blur but whatever */
